@@ -1,0 +1,7 @@
+#figdir = figures
+docname = monodevelop
+lang = C
+omffile = monodevelop.omf
+entities = legal.xml
+include $(top_srcdir)/xmldocs.make
+dist-hook: app-dist-hook
