@@ -1,0 +1,30 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE omf PUBLIC "-//OMF//DTD Scrollkeeper OMF Variant V1.0//EN" "http://scrollkeeper.sourceforge.net/dtds/scrollkeeper-omf-1.0/scrollkeeper-omf.dtd">
+<omf>
+  <resource>
+    <creator>
+      Fawad Halim &lt;fawad@fawad.net&gt;
+    </creator>
+    <maintainer>
+      Fawad Halim &lt;fawad@fawad.net&gt;
+    </maintainer>
+    <title>
+      MonoDevelop documentation
+    </title>
+    <date>
+      2004-05-25
+    </date>
+    <version identifier="0.1" date="2004-05-25" description="Initial documentation import" />
+    <subject category="GNOME|Applications|Programming"/>
+    <description>
+      User manual for the MonoDevelop .NET IDE.
+    </description>
+    <type>
+      user's guide
+    </type>
+    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
+    <identifier url="monodevelop.xml"/>
+    <language code="C"/>
+	<relation seriesid="6a0dd49a-b0b6-11d8-9992-9d3f4ad93477" />
+  </resource>        
+</omf>
