@@ -1,0 +1,113 @@
+<?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+  <!ENTITY appversion "0.40">
+<!ENTITY manrevision "0.1">
+<!ENTITY date "March 2004">
+<!ENTITY app "MonoDevelop">
+<!ENTITY app-url "http://www.monodevelop.com/">
+]>
+<!-- =============Document Header ============================= -->
+<article id="index" lang="en">
+	<articleinfo> 
+		<title>&app; Manual V&manrevision;</title>
+		<copyright> 
+			<year>2004</year>
+			<holder>MonoDevelop Team</holder> 
+		</copyright>
+		<publisher> 
+			<publishername>MonoDevelop Team</publishername>
+		</publisher>
+		<authorgroup> 
+			<author> 
+				<firstname>Fawad</firstname>
+				<surname>Halim</surname> 
+				<address>
+					<email>fawad@fawad.net</email> 
+				</address>
+			</author>
+			<author> 
+				<firstname>Todd</firstname>
+				<surname>Berman</surname> 
+				<address>
+					<email>tberman@sevenl.net</email>
+				</address>
+			</author>
+			 
+		</authorgroup>
+		<releaseinfo> This manual describes version &appversion; of the &app; IDE.
+		</releaseinfo>
+		<legalnotice> 
+			<title>Feedback</title>
+			<para>
+				To report a bug or make a suggestion regarding the <application>&app;</application> application or this manual, follow the directions in the <ulink url="ghelp:gnome-feedback" type="help">GNOME Feedback Page</ulink>. 
+			</para>
+		</legalnotice>
+	</articleinfo>
+	<indexterm>
+		<primary>monodevelop</primary>
+	</indexterm>
+	<indexterm>
+		<primary>ide</primary>
+	</indexterm>
+	
+	<!-- ============= Document Body ============================= -->
+	<!-- ============= Introduction ============================== -->
+	<sect1 id="md-intro"> 
+		<title>Introduction</title>
+		<para>
+			<application>&app;</application> is an IDE for developing .NET applications on the POSIX platform.
+		</para>
+	</sect1>
+	<sect1 id="md-gettingstarted">
+		<title>Getting Started</title>
+		<sect2 id="md-gettingstarted-theide">
+			<title>MonoDevelop IDE</title>
+			<sect3 id="md-gettingstarted-pads">
+				<title>MonoDevelop Pads</title>
+				<sect4 id="md-gettingstarted-pads-solution">
+					<title>Solution Pad</title>
+				</sect4>
+				<sect4 id="md-gettingstarted-pads-classes">
+					<title>Classes Pad</title>
+				</sect4>
+				<sect4 id="md-gettingstarted-pads-files">
+					<title>Files Pad</title>
+				</sect4>
+				<sect4 id="md-gettingstarted-pads-tasks">
+					<title>Task List Pad</title>
+				</sect4>
+				<sect4 id="md-gettingstarted-pads-help">
+					<title>Help Pad</title>
+				</sect4>
+				<sect4 id="md-gettingstarted-pads-output">
+					<title>Output Pad</title>
+				</sect4>
+			</sect3>
+			<sect3 id="md-gettingstarted-sourceeditor">
+				<title>Source Editor</title>
+			</sect3>
+		</sect2>
+	</sect1>
+	<sect1 id="md-workingwith">
+		<title>Working With MonoDevelop</title>
+		<sect2 id="md-workingwith-intro">
+			<title>Introduction</title>
+		</sect2>
+		<sect2 id="md-workingwith-solutions">
+			<title>Solutions</title>
+		</sect2>
+		<sect2 id="md-workingwith-projects">
+			<title>Projects</title>
+		</sect2>
+		<sect2 id="md-workingwith-files">
+			<title>Files</title>
+		</sect2>
+		<sect2 id="md-workingwith-references">
+			<title>References</title>
+		</sect2>
+		<sect2 id="md-workingwith-options">
+			<title>IDE Options</title>
+		</sect2>
+	</sect1>
+</article>
