@@ -1,3 +1,8 @@
+2004-05-30  Fawad Halim  <fawad@fawad.net>
+	* help/: Imported initial docbook docs skeleton
+	* xmldocs.make,omf.make: Imported supporting omf/docbook files from GNOME CVS
+	* configure.in,Makefile.am: Add help/ in build
+
 2004-05-29  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* configure.in: Changed da_DK to da
